<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/search_page_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_title"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="24sp" />

        <LinearLayout
            android:id="@+id/departmentSearch"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/department_search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/department_search_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/department_search_hint" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/courseNumberSearch"
            android:layout_width="match_parent"
            android:layout_height="91dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/course_number_search_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/course_number_search_text"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/course_number_search_hint"
                    android:inputType="number"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/add_course"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_course_button_text" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>